# I-See-Qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_CN.md
docs/: CHANGELOG.md  CONTRIBUTING.md
src/: main.cpp
src/const/: AppConfig.h  QtHeaders.h
src/models/: TaskItem.h
src/services/: ApiService.cpp  ApiService.h  HistoryService.cpp  HistoryService.h  TaskDatabaseService.cpp  TaskDatabaseService.h
src/ui/: MainWindow.cpp  MainWindow.h  SettingsDialog.cpp  SettingsDialog.h  SetupDialog.cpp  SetupDialog.h  TaskHistoryWindow.cpp  TaskHistoryWindow.h
src/viewmodel/: MainViewModel.cpp  MainViewModel.h
